# REA-80001-ESP32-IDF

./: .gitmodules  README.md
REA-80001/: CMakeLists.txt
REA-80001/main/: CMakeLists.txt  main.cpp
REA-80001/main/lib/Adafruit_NeoPixel/src/: Adafruit_NeoPixel.h
REA-80001/main/lib/ESP32-TWAI-CAN/src/: ESP32-TWAI-CAN.cpp  ESP32-TWAI-CAN.hpp
REA-80001/main/src/: CAN.cpp  CAN.h  DMX.cpp  DMX.h  LED_Strip.cpp  LED_Strip.h  Power_Supply.cpp  Power_Supply.h  Serial_Parser.cpp  Serial_Parser.h  Support.cpp  Support.h  defs.h
